--- a/src/marketplace/campusmart/templates/campusmart/create_user.html
+++ b/src/marketplace/campusmart/templates/campusmart/create_user.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <!-- Bootstrap CSS -->
+    <title>Create User</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -27,47 +26,50 @@
 <body>
     <div class="container">
         <div class="login-container">
-            <h2 class="text-center mb-4">Login</h2>
+            <h2 class="text-center mb-4">Create User</h2>
             
-            {% if error_message %}
-                <div class="alert alert-danger" role="alert">
-                    {{ error_message }}
-                </div>
+            {% if error_messages %}
+				{% for error_message in error_messages %}
+                	<div class="alert alert-danger" role="alert">
+                    	{{ error_message }}
+                	</div>
+				{% endfor %}
             {% endif %}
-
-			{% if messages %}
-    			{% for message in messages %}
-        			<div class="alert alert-success" role="alert">
-            			{{ message }}
-        			</div> 
-    			{% endfor %}
-			{% endif %}
             
             <form method="post">
                 {% csrf_token %}
                 
+                <div class="mb-3">
+                    <label for="id_name" class="form-label">Full Name</label>
+                    <input type="text" class="form-control" name="name" id="id_name" required>
+                </div>
+
                 <div class="mb-3">
                     <label for="id_username" class="form-label">Username</label>
                     <input type="text" class="form-control" name="username" id="id_username" required>
                 </div>
                 
                 <div class="mb-3">
+                    <label for="id_email" class="form-label">Email</label>
+                    <input type="email" class="form-control" name="email" id="id_email" required>
+                </div>
+
+                <div class="mb-3">
                     <label for="id_password" class="form-label">Password</label>
                     <input type="password" class="form-control" name="password" id="id_password" required>
                 </div>
-                
+
+                <div class="mb-3">
+                    <label for="id_password_auth" class="form-label">Confirm Password</label>
+                    <input type="password" class="form-control" name="password_auth" id="id_password_auth" required>
+                </div>
+
                 <div class="d-grid gap-2">
-                    <button type="submit" class="btn btn-primary">Login</button>
+                    <button type="submit" class="btn btn-primary">Create User</button>
                 </div>
             </form>
-
-            <div class="d-grid gap-2" style="margin-top: 8px;">
-                <a href="{% url 'campusmart:create_user' %}" class="btn btn-primary">Create User</a>
-            </div>
         </div>
     </div>
-
-    <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
