--- a/src/marketplace/campusmart/templates/campusmart/home.html
+++ b/src/marketplace/campusmart/templates/campusmart/home.html
@@ -49,7 +49,7 @@
                         <a class="nav-link active" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Categories</a>
+                        <a class="nav-link" href="#">Create a Listing</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Sell</a>
