Can add a picture to a listing 🤯

--- a/src/marketplace/campusmart/templates/campusmart/base_page.html
+++ b/src/marketplace/campusmart/templates/campusmart/base_page.html
@@ -40,14 +40,14 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="#">CampusMart</a>
+            <a class="navbar-brand" href="{% url 'campusmart:home' %}">CampusMart</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Home</a>
+                        <a class="nav-link active" href="{% url 'campusmart:home' %}">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'campusmart:create_listing' %}">Create a Listing</a>
