--- a/src/marketplace/campusmart/templates/campusmart/base_page.html
+++ b/src/marketplace/campusmart/templates/campusmart/base_page.html
@@ -47,16 +47,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'campusmart:home' %}">Home</a>
+                        <a id="homeTab" class="nav-link active" href="{% url 'campusmart:home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'campusmart:create_listing' %}">Create a Listing</a>
+                        <a id="listTab" class="nav-link" href="{% url 'campusmart:create_listing' %}">Create a Listing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sell</a>
+                        <a id="sellTab" class="nav-link" href="#">Sell</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a id="aboutTab" class="nav-link" href="#">About</a>
                     </li>
                 </ul>
                 <div class="d-flex" style="margin-right:3%;">
@@ -126,6 +126,10 @@
             </div>
         </div>
     </footer>
+    <script>
+        document.getElementsByClassName("nav-link active")[0].classList.remove("active")
+        document.getElementById({% block currPage %}{% endblock %}).classList.add("active");
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
