--- a/src/marketplace/campusmart/templates/campusmart/view_listings.html
+++ b/src/marketplace/campusmart/templates/campusmart/view_listings.html
@@ -6,7 +6,7 @@
 
 <div class="row" style="margin-left:0.5%;">
     {% for listing in listings %}
-    <div class="col-md-4 mb-4">
+    <div class="col-md-3 mb-3">
         <div class="card h-100">
             <!-- Primary Photo -->
             <div class="card-img-top-container" style="height: 200px; overflow: hidden;">
@@ -73,35 +73,35 @@
 <!-- Pagination -->
 <nav aria-label="Page navigation">
     <ul class="pagination justify-content-center mt-4">
-        {% if page.has_previous %}
+        {% if listings.has_previous %}
         <li class="page-item">
             <a class="page-link" href="?page=1" aria-label="First">
                 <span aria-hidden="true">&laquo;&laquo;</span>
             </a>
         </li>
         <li class="page-item">
-            <a class="page-link" href="?page={{ page.previous_page_number }}" aria-label="Previous">
+            <a class="page-link" href="?page={{ listings.previous_page_number }}" aria-label="Previous">
                 <span aria-hidden="true">&laquo;</span>
             </a>
         </li>
         {% endif %}
         
-        {% for num in page.paginator.page_range %}
-            {% if page.number == num %}
+        {% for num in listings.paginator.page_range %}
+            {% if listings.number == num %}
             <li class="page-item active"><a class="page-link" href="#">{{ num }}</a></li>
-            {% elif num > page.number|add:'-3' and num < page.number|add:'3' %}
+            {% elif num > listings.number|add:'-3' and num < listings.number|add:'3' %}
             <li class="page-item"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
             {% endif %}
         {% endfor %}
         
-        {% if page.has_next %}
+        {% if listings.has_next %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ page.next_page_number }}" aria-label="Next">
+            <a class="page-link" href="?page={{ listings.next_page_number }}" aria-label="Next">
                 <span aria-hidden="true">&raquo;</span>
             </a>
         </li>
         <li class="page-item">
-            <a class="page-link" href="?page={{ page.paginator.num_pages }}" aria-label="Last">
+            <a class="page-link" href="?page={{ listings.paginator.num_pages }}" aria-label="Last">
                 <span aria-hidden="true">&raquo;&raquo;</span>
             </a>
         </li>
