Task 4.1 Finsihed, only style remaining

--- a/src/marketplace/campusmart/templates/campusmart/buy_coins.html
+++ b/src/marketplace/campusmart/templates/campusmart/buy_coins.html
@@ -7,6 +7,19 @@
                 <p class="text-center">You have {{ amt }} coins</p>
             </div>
         </div>
+        <div class="row">
+        {% if error_message %}  
+                <div class="alert alert-danger" role="alert">
+                    {{ error_message }}
+                </div>
+        {% endif %}
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button class="btm btn-primary" type="submit">Buy</button>
+        </form>    
+        
+        </div>"
     </div>
     
 
