--- a/src/marketplace/campusmart/templates/campusmart/base_page.html
+++ b/src/marketplace/campusmart/templates/campusmart/base_page.html
@@ -67,7 +67,7 @@
                             </button>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">My Profile</a></li>
-                                <li><a class="dropdown-item" href="#">My Listings</a></li>
+                                <li><a class="dropdown-item" href="{% url 'campusmart:user_listings' %}">My Listings</a></li>
                                 <li><a class="dropdown-item" href="#">Messages</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="{% url 'campusmart:logout' %}">Logout</a></li>
