--- a/src/marketplace/campusmart/templates/campusmart/create_listing.html
+++ b/src/marketplace/campusmart/templates/campusmart/create_listing.html
@@ -14,9 +14,7 @@
             <div id="image-formset-container">
                 {% for form in factoryForm %}
                 <div class="form-group">
-                    {{ form.image.label_tag }}
-                    {{ form.image }}
-                    {{ form.image.errors }}
+                    {{ form.as_p }}
                 </div>
                 {% endfor %}
             </div>
@@ -31,45 +29,23 @@
 <script>
     const imageFormContainer = document.getElementById('image-formset-container');
     const totalForms = document.getElementById('id_image_set-TOTAL_FORMS');
+    const addImageButton = document.getElementById('add-image-form');
     let formNum = imageFormContainer.querySelectorAll('.form-group').length;
-    console.log(formNum);
-    let emptyForm = document.querySelector('.form-group');
-    
-    if (formNum > 0) {
-        emptyForm = document.querySelector('.form-group').cloneNode(true);
-    }
-    
-    document.getElementById('add-image-form').addEventListener('click', function() {
-        console.log("clicked");
-        let newForm;
-        if (formNum === 0) {
-            // Create the first form directly (you might need to construct the HTML)
-            newForm = document.createElement('div');
-            newForm.classList.add('form-group');
-            newForm.innerHTML = `
-                <p><label for="id_image_set-0-image">Image:</label> <input type="file" name="image_set-0-image" id="id_image_set-0-image" class="form-control"></p>
-            `;
-            imageFormContainer.appendChild(newForm);
-            emptyForm = newForm;
 
-        } else {
-            newForm = emptyForm.cloneNode(true);
-            newForm.querySelectorAll('input, select, textarea, label').forEach(element => {
-                const newId = element.id ? element.id.replace('image_set-' + (formNum - 1) + '-', '-' + formNum + '-') : null;
-                const newName = element.name ? element.name.replace('image_set-' + (formNum - 1) + '-', '-' + formNum + '-') : null;
-                if (newId) element.id = newId;
-                if (newName) element.name = newName;
-                if (element.tagName === 'INPUT' && element.type === 'file') {
-                    element.value = '';
-                }
-                imageFormContainer.appendChild(newForm);
-            });
-        }
-
+    function addImageForm() {
+        const newForm = document.createElement('div');
+        newForm.classList.add('form-group');
+        newForm.innerHTML = `
+            <p><label for="id_image_set-${formNum}-image">Image:</label> <input type="file" name="image_set-${formNum}-image" id="id_image_set-${formNum}-image" class="form-control"></p>
+            <p><label for="id_image_set-${formNum}-DELETE">Delete:</label> <input type="checkbox" name="image_set-${formNum}-DELETE" id="id_image_set-${formNum}-DELETE"></p>
+        `;
+        imageFormContainer.appendChild(newForm);
         formNum++;
         totalForms.value = formNum;
-    });
-    </script>
+    }
+
+    addImageButton.addEventListener('click', addImageForm);
+</script>
 
 {% endblock %}
 {% block currPage %}"sellTab"{% endblock %}
