Fixed button offset

--- a/src/marketplace/campusmart/templates/campusmart/create_listing.html
+++ b/src/marketplace/campusmart/templates/campusmart/create_listing.html
@@ -19,7 +19,7 @@
                 {% endfor %}
             </div>
 
-            <button type="button" id="add-image-form" class="btn btn-secondary mt-2">Add Another Image</button>
+            <button type="button" id="add-image-form" class="btn btn-secondary">Add Another Image</button>
             <button type="submit" class="btn btn-primary">Create Listing</button>
         </form>
         <br/>
