Fixed links to hyperlinks

--- a/src/marketplace/campusmart/templates/campusmart/base_page.html
+++ b/src/marketplace/campusmart/templates/campusmart/base_page.html
@@ -104,9 +104,9 @@
                 <div class="col-md-2 mb-4">
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-white text-decoration-none">Home</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">Browse</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">Sell</a></li>
+                        <li><a href="{% url 'campusmart:home' %}" class="text-white text-decoration-none">Home</a></li>
+                        <li><a href="{% url 'campusmart:listings' %}" class="text-white text-decoration-none">Browse</a></li>
+                        <li><a href="{% url 'campusmart:create_listing' %}" class="text-white text-decoration-none">Sell</a></li>
                         <li><a href="#" class="text-white text-decoration-none">Safety Tips</a></li>
                     </ul>
                 </div>
