--- a/src/marketplace/campusmart/templates/campusmart/home.html
+++ b/src/marketplace/campusmart/templates/campusmart/home.html
@@ -187,7 +187,7 @@
             <h2 class="display-6 mb-4">Ready to sell your items?</h2>
             <p class="lead mb-4">Join thousands of students who are already buying and selling on CampusMart.</p>
             {% if request.session.user %}
-                <a href="#" class="btn btn-light btn-lg">Post a Listing</a>
+                <a href="{% url 'campusmart:create_listing' %}" class="btn btn-light btn-lg">Post a Listing</a>
             {% else %}
                 <a href="{% url 'campusmart:login' %}" class="btn btn-light btn-lg">Get Started</a>
             {% endif %}
