--- a/src/marketplace/campusmart/templates/campusmart/create_user.html
+++ b/src/marketplace/campusmart/templates/campusmart/create_user.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -23,7 +23,9 @@
         }
     </style>
 </head>
-<body>
+<body> -->
+{% extends "base_page.html" %}
+{% block content %}
     <div class="container">
         <div class="login-container">
             <h2 class="text-center mb-4">Create User</h2>
@@ -71,5 +73,4 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+{% endblock %}
