--- a/src/marketplace/campusmart/templates/campusmart/buy_coins.html
+++ b/src/marketplace/campusmart/templates/campusmart/buy_coins.html
@@ -2,25 +2,36 @@
 {% block content%}
 <body> 
     <div class="container grid">
-        <div class="row">
+        <div class="row" style="margin-top:10%">
             <div class="display-1">
-                <p class="text-center">You have {{ amt }} coins</p>
+                <p class="text-center">You have {{ amt }} Krato$Coin</p>
             </div>
         </div>
+        <div class="row" style="padding-top: 5%;font-weight: 700;">
+            <p class="text-center">Need extra listings? Buy them here - only 1 KC for an extra listing! Don't forget to come back tomorrow for an additional 3 listings!</p>
+        </div>
         <div class="row">
-        {% if error_message %}  
+        {% if error_message %} 
                 <div class="alert alert-danger" role="alert">
                     {{ error_message }}
                 </div>
         {% endif %}
-        <form method="post">
+        <form class="form" method="post" style="padding-bottom: 6.75%;">
             {% csrf_token %}
-            {{ form.as_p }}
-            <button class="btm btn-primary" type="submit">Buy</button>
+            <!-- {{ form.as_p }} -->
+            <div class="form-group row">
+                <label for="amount" class="col-sm-2 col-form-label">Amount of Coins</label>
+                <div class="col-sm-10">
+                  <input type="number" class="form-control" id="amount" placeholder="1,2,..." name="amount"required="true">
+                </div>
+              </div>
+            <br/>
+            <button class="btn btn-primary btn-lg" style="margin-left:50%;" type="submit">Buy</button>
         </form>    
         
-        </div>"
+        </div>
     </div>
+    <br/>
     
 
 
