--- a/src/marketplace/campusmart/templates/campusmart/base_page.html
+++ b/src/marketplace/campusmart/templates/campusmart/base_page.html
@@ -69,7 +69,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="{% url 'campusmart:buy_coins' %}">Buy Listings</a></li>
                                 <li><a class="dropdown-item" href="{% url 'campusmart:my_listings' %}">My Listings</a></li>
-                                <li><a class="dropdown-item" href="#">Messages</a></li>
+                                <li><a class="dropdown-item" href="{% url 'campusmart:messages' %}">Messages</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="{% url 'campusmart:logout' %}">Logout</a></li>
                             </ul>
