--- a/src/marketplace/campusmart/templates/listing_detail.html
+++ b/src/marketplace/campusmart/templates/listing_detail.html
@@ -41,6 +41,10 @@
 
                     <p class="card-text">{{ listing.description }}</p>
 
+                    <div class="mt-3">
+                        <a href="{% url 'campusmart:chat' listing.seller.username %}?item={{ listing.title }}" class="btn btn-primary">Chat with Seller</a>
+                    </div>
+
                     {% if can_delete %}
                     <div class="mt-3">
                         <a href="{% url 'campusmart:edit_listing' listing.id %}" class="btn btn-warning me-2">Edit</a>
