--- a/src/marketplace/campusmart/templates/campusmart/create_user.html
+++ b/src/marketplace/campusmart/templates/campusmart/create_user.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -23,9 +23,7 @@
         }
     </style>
 </head>
-<body> -->
-{% extends "base_page.html" %}
-{% block content %}
+<body>
     <div class="container">
         <div class="login-container">
             <h2 class="text-center mb-4">Create User</h2>
@@ -73,4 +71,3 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-{% endblock %}
