--- a/src/marketplace/campusmart/templates/campusmart/base_page.html
+++ b/src/marketplace/campusmart/templates/campusmart/base_page.html
@@ -55,9 +55,6 @@
                     <li class="nav-item">
                         <a id="sellTab" class="nav-link" href="{% url 'campusmart:create_listing' %}">Sell</a>
                     </li>
-                    <li class="nav-item">
-                        <a id="aboutTab" class="nav-link" href="#">About</a>
-                    </li>
                 </ul>
                 {% if request.session.user %}<div><p class="h5" style="padding-right:1vh;color:white">Listings Remaining: {{listings_remaining}}</p></div>{%endif%}
                 <div class="d-flex" style="margin-right:3%;">
@@ -108,26 +105,20 @@
                         <li><a href="{% url 'campusmart:home' %}" class="text-white text-decoration-none">Home</a></li>
                         <li><a href="{% url 'campusmart:listings' %}" class="text-white text-decoration-none">Browse</a></li>
                         <li><a href="{% url 'campusmart:create_listing' %}" class="text-white text-decoration-none">Sell</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">Safety Tips</a></li>
                     </ul>
                 </div>
                 <div class="col-md-2 mb-4">
                     <h5>Categories</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-white text-decoration-none">Textbooks</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">Electronics</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">Furniture</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">Transport</a></li>
+                        <li><a href="{% url 'campusmart:search_results' %}?query=textbooks" class="text-white text-decoration-none">Textbooks</a></li>
+                        <li><a href="{% url 'campusmart:search_results' %}?query=electronics" class="text-white text-decoration-none">Electronics</a></li>
+                        <li><a href="{% url 'campusmart:search_results' %}?query=furniture" class="text-white text-decoration-none">Furniture</a></li>
+                        <li><a href="{% url 'campusmart:search_results' %}?query=transport" class="text-white text-decoration-none">Transport</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 mb-4">
                     <h5>Contact Us</h5>
                     <p><i class="bi bi-envelope"></i> support@campusmart.com</p>
-                    <div class="mt-3">
-                        <a href="#" class="text-white me-2"><i class="bi bi-facebook fs-4"></i></a>
-                        <a href="#" class="text-white me-2"><i class="bi bi-twitter fs-4"></i></a>
-                        <a href="#" class="text-white me-2"><i class="bi bi-instagram fs-4"></i></a>
-                    </div>
                 </div>
             </div>
             <hr>
