--- a/src/marketplace/campusmart/templates/campusmart/home.html
+++ b/src/marketplace/campusmart/templates/campusmart/home.html
@@ -105,7 +105,7 @@
         <h2 class="text-center mb-4">Popular Categories</h2>
         <div class="row">
             <div class="col-md-3 col-6">
-                <a href="#" class="text-decoration-none">
+                <a href="{% url 'campusmart:search_results' %}?query=textbooks" class="text-decoration-none">
                     <div class="card category-card text-center">
                         <div class="card-body">
                             <i class="bi bi-book fs-1 text-primary"></i>
@@ -115,7 +115,7 @@
                 </a>
             </div>
             <div class="col-md-3 col-6">
-                <a href="#" class="text-decoration-none">
+                <a href="{% url 'campusmart:search_results' %}?query=electronics" class="text-decoration-none">
                     <div class="card category-card text-center">
                         <div class="card-body">
                             <i class="bi bi-laptop fs-1 text-primary"></i>
@@ -125,7 +125,7 @@
                 </a>
             </div>
             <div class="col-md-3 col-6">
-                <a href="#" class="text-decoration-none">
+                <a href="{% url 'campusmart:search_results' %}?query=furniture" class="text-decoration-none">
                     <div class="card category-card text-center">
                         <div class="card-body">
                             <i class="bi bi-house-door fs-1 text-primary"></i>
@@ -135,7 +135,7 @@
                 </a>
             </div>
             <div class="col-md-3 col-6">
-                <a href="#" class="text-decoration-none">
+                <a href="{% url 'campusmart:search_results' %}?query=transport" class="text-decoration-none">
                     <div class="card category-card text-center">
                         <div class="card-body">
                             <i class="bi bi-bicycle fs-1 text-primary"></i>
