Auto queries now have items

--- a/src/marketplace/campusmart/templates/campusmart/base_page.html
+++ b/src/marketplace/campusmart/templates/campusmart/base_page.html
@@ -110,8 +110,8 @@
                 <div class="col-md-2 mb-4">
                     <h5>Categories</h5>
                     <ul class="list-unstyled">
-                        <li><a href="{% url 'campusmart:search_results' %}?query=textbooks" class="text-white text-decoration-none">Textbooks</a></li>
-                        <li><a href="{% url 'campusmart:search_results' %}?query=electronics" class="text-white text-decoration-none">Electronics</a></li>
+                        <li><a href="{% url 'campusmart:search_results' %}?query=textbook" class="text-white text-decoration-none">Textbooks</a></li>
+                        <li><a href="{% url 'campusmart:search_results' %}?query=electronic" class="text-white text-decoration-none">Electronics</a></li>
                         <li><a href="{% url 'campusmart:search_results' %}?query=furniture" class="text-white text-decoration-none">Furniture</a></li>
                         <li><a href="{% url 'campusmart:search_results' %}?query=transport" class="text-white text-decoration-none">Transport</a></li>
                     </ul>
